--- a/PDRPC.Core/packages.config
+++ b/PDRPC.Core/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="DiscordRichPresence" version="1.0.175" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
+  <package id="DllExport" version="1.7.4" targetFramework="net40" />
 </packages>
