--- a/PDRPC/PDRPC.rc
+++ b/PDRPC/PDRPC.rc
@@ -67,7 +67,7 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "I love MS Lyrical Nanoha."
+            VALUE "CompanyName", "I love Mahou Shoujo Lyrical Nanoha."
             VALUE "FileDescription", "Entry wrapper for PDRPC."
             VALUE "FileVersion", "0.1.5.0"
             VALUE "InternalName", "PDRPC.dll"
