--- a/PDRPC.Core/PDRPC.Core.csproj
+++ b/PDRPC.Core/PDRPC.Core.csproj
@@ -60,13 +60,13 @@
     <Compile Include="Managers\DiscordManager.cs" />
     <Compile Include="Managers\ProcessManager.cs" />
     <Compile Include="Mod.cs" />
-    <Compile Include="Models\ActivityModel.cs" />
-    <Compile Include="Models\AlbumModel.cs" />
-    <Compile Include="Models\CharacterModel.cs" />
-    <Compile Include="Models\CustomSongModel.cs" />
-    <Compile Include="Models\SongInfoModel.cs" />
-    <Compile Include="Models\SongModel.cs" />
-    <Compile Include="Models\SongPerformerModel.cs" />
+    <Compile Include="Models\Activity\ActivityModel.cs" />
+    <Compile Include="Models\Presence\AlbumModel.cs" />
+    <Compile Include="Models\Presence\CharacterModel.cs" />
+    <Compile Include="Models\Presence\CustomSongModel.cs" />
+    <Compile Include="Models\Database\SongInfoModel.cs" />
+    <Compile Include="Models\Database\SongModel.cs" />
+    <Compile Include="Models\Database\SongPerformerModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\BuildInfo.cs" />
     <Compile Include="Properties\Constants.cs" />
