--- a/PDRPC.Core/PDRPC.Core.csproj
+++ b/PDRPC.Core/PDRPC.Core.csproj
@@ -61,13 +61,13 @@
     <Compile Include="Managers\DiscordManager.cs" />
     <Compile Include="Managers\ProcessManager.cs" />
     <Compile Include="Mod.cs" />
-    <Compile Include="Models\Presence\ActivityModel.cs" />
-    <Compile Include="Models\Database\SongMemoryModel.cs" />
-    <Compile Include="Models\Presence\AlbumModel.cs" />
-    <Compile Include="Models\Presence\CharacterModel.cs" />
-    <Compile Include="Models\Database\SongInfoModel.cs" />
-    <Compile Include="Models\Database\SongModel.cs" />
-    <Compile Include="Models\Database\SongPerformerModel.cs" />
+    <Compile Include="Models\Presence\Activity.cs" />
+    <Compile Include="Models\Database\SongMemory.cs" />
+    <Compile Include="Models\Presence\Album.cs" />
+    <Compile Include="Models\Presence\Character.cs" />
+    <Compile Include="Models\Database\SongInfo.cs" />
+    <Compile Include="Models\Database\Song.cs" />
+    <Compile Include="Models\Database\SongPerformer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\BuildInfo.cs" />
     <Compile Include="Properties\Constants.cs" />
